# mycode

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  LICENSE.md  MEMORY.md  README.md  code-analysis.md  corpus_aggregate.json  corpus_aggregate.xlsx  corpus_classified.json  known_issues.md  myCode-Library-Taxonomy-Schema-v1.md  myCode-Market-Evidence-18-DataPoints.md  myCode-Pricing-and-Token-Economics.md  plan.md  pyproject.toml  simulation_results.json  simulation_results.md  token_simulation.py  track-b-nodejs-harness-plan.md
.claude/: settings.json
.github/workflows/: mycode-self-check.yml
corpus_extraction/: corpus_extraction_log.txt  corpus_patterns_ranked.json  corpus_patterns_summary.xlsx
corpus_results/: batch_report.xlsx  batch_results.json
docs/: corpus-methodology-reconstruction.md  model-diagnosis.md  model-fixes-summary.md  myCode-Validation-Loop-Evidence-v2.docx  myCode-Validation-Loop-Evidence.docx  validation-reports.md
docs/ci/: README.md  mycode-check.yml
docs/self-test/: mycode-self-test-report.json
examples/expense_tracker/: app.py
plans/: plan-2026-03-11-web-interface.md
profiles/javascript/: anthropic_node.json  chartjs.json  express.json  google_auth_library.json  mongoose.json  nextjs.json  openai_node.json  plotlyjs.json  prisma.json  react.json  react_chartjs_2.json  react_plotlyjs.json  stripe.json  svelte.json  tailwindcss.json  threejs.json  zod.json
profiles/python/: anthropic.json  fastapi.json  flask.json  gradio.json  httpx.json  llamaindex.json  numpy.json  openai.json  requests.json  sqlalchemy.json  sqlite3.json  streamlit.json  supabase.json
scripts/: backfill_github_metadata.py  batch_mine.py  build_training_data.py  corpus_aggregator.py  corpus_extract.py  lovable_scraper.py  migrate_taxonomy.py  repo_hunter.py  train_prediction_model.py
src/mycode/: __init__.py  __main__.py  classifiers.py  cli.py  constraints.py  container.py  discovery.py  documents.py  endpoint_discovery.py  engine.py  fix_enrichment.py  http_load_driver.py  hysteresis.py  inference.py  ingester.py  interface.py  js_ingester.py  js_module_loader.js  js_module_loader.py  js_parser.js  js_stress_runner.js  (+12 more)
tests/: conftest.py  test_admin_jobs.py  test_analytics.py  test_batch_mine.py  test_ci_gate.py  test_classifiers.py  test_container.py  test_corpus_aggregator.py  test_discovery.py  test_documents.py  test_endpoint_discovery.py  test_engine.py  test_fix_enrichment.py  test_http_load_driver.py  test_hysteresis.py  test_inference.py  test_ingester.py  test_integration.py  test_intent_wiring.py  test_interface.py  test_js_ingester.py  test_js_module_loader.py  test_js_parser.py  test_js_stress_runner.py  test_library.py  test_lovable_scraper.py  test_migrate_taxonomy.py  test_multi_language.py  test_pdf_content.py  test_pipeline.py  test_recorder.py  test_report.py  test_scenario.py  test_server_manager.py  test_session.py  test_viability.py  test_web.py
web/: app.js  config.js  index.html  style.css
(+39 files in other folders)
