[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mycode"
version = "0.1.0"
description = "Stress-testing tool for AI-generated code"
requires-python = ">=3.10"
authors = [
    {name = "Machine Adjacent Systems"},
]
license = "MIT"

[project.scripts]
mycode = "mycode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mycode = ["profiles/**/*.json"]

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that create real virtual environments",
]
