[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mycode-ai"
version = "0.1.2"
description = "Stress-testing tool for AI-generated code"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Machine Adjacent Systems"},
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
]
pdf = [
    "fpdf2>=2.8.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/Manav-Guha/mycode"
Repository = "https://github.com/Manav-Guha/mycode"
Issues = "https://github.com/Manav-Guha/mycode/issues"

[project.scripts]
mycode = "mycode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mycode = ["profiles/**/*.json", "data/*.json", "data/*.joblib"]

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that create real virtual environments",
]
